# ros2-ur5-motion-control-system

./: .gitignore  LICENSE.txt  README.md
bags/: README.md
docs/architecture/: data_flow.md  state_machine.md  system_architecture.md
docs/experiments/: experiment_plan.md
docs/interfaces/: actions.md  params.md  services.md  topics.md
docs/progress/: stage1_summary.md  stage2_summary.md  进度规划.md
scripts/: README.md  merge_compile_commands.sh
src/bringup_pkg/: CMakeLists.txt  package.xml
src/bringup_pkg/config/: system_params.yaml
src/bringup_pkg/launch/: bringup.launch.py  sim_with_system.launch.py  system_only.launch.py
src/controller_pkg/: CMakeLists.txt  package.xml
src/controller_pkg/config/: controller_params.yaml
src/controller_pkg/include/controller_pkg/: controller_node.hpp  trajectory_executor.hpp
src/controller_pkg/src/: controller_node.cpp  main.cpp  trajectory_executor.cpp
src/motion_api_pkg/: CMakeLists.txt  package.xml
src/motion_api_pkg/config/: motion_api_params.yaml
src/motion_api_pkg/include/motion_api_pkg/: motion_api_node.hpp
src/motion_api_pkg/src/: main.cpp  motion_api_node.cpp
src/planner_pkg/: CMakeLists.txt  package.xml
src/planner_pkg/config/: planner_params.yaml
src/planner_pkg/include/planner_pkg/: planner_node.hpp  simple_joint_planner.hpp
src/planner_pkg/src/: main.cpp  planner_node.cpp  simple_joint_planner.cpp
src/robot_common_pkg/: CMakeLists.txt  package.xml
src/robot_common_pkg/include/robot_common_pkg/: constants.hpp
src/robot_interface_pkg/: CMakeLists.txt  package.xml
src/robot_interface_pkg/config/: interface_params.yaml
src/robot_interface_pkg/include/robot_interface_pkg/: robot_interface_node.hpp  ur_gazebo_backend.hpp
src/robot_interface_pkg/src/: main.cpp  robot_interface_node.cpp  ur_gazebo_backend.cpp
src/robot_motion_msgs/: CMakeLists.txt  package.xml
src/robot_motion_msgs/action/: MoveJoints.action
src/robot_motion_msgs/msg/: MotionCommand.msg  MotionEvent.msg  PlannedTrajectory.msg  SystemState.msg  TaskState.msg
src/robot_motion_msgs/srv/: ResetSystem.srv
src/system_manager_pkg/: CMakeLists.txt  package.xml
src/system_manager_pkg/config/: manager_params.yaml
src/system_manager_pkg/include/system_manager_pkg/: state_machine.hpp  system_manager_node.hpp  task_state_machine.hpp
src/system_manager_pkg/src/: main.cpp  state_machine.cpp  system_manager_node.cpp  task_state_machine.cpp
